# bgtu_bot

./: .gitignore  Aptfile  a.py  app.py  appv1 webhooked.py  bot.py  dbutils.py  keyboards.py  pyproject.toml  requirements.txt  service_manager.sh  site_parser.py  wdays.py
.github/workflows/: pylint.yml
app/: keyboards.py  models.py  properties.py  settings.json  settings.sample.json  time_trigger.py
app/filters/: __init__.py  admin.py
app/handlers/: admin.py  admin_menu.py  common.py  menu.py
app/routers/: __init__.py  admin.py  admin_menu.py  common.py  menu.py
app/utils/: api_worker.py  db_worker.py  schedule_management.py  text_generator.py  wdays.py
systemd/: README.md  bgtu-bot.service.template
