[project]
name = "bgtu-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.13.1",
    "aiohttp>=3.9.0",
    "asyncio~=3.4.3",
    "loguru~=0.7.2",
    "motor~=3.3.2",
    "prettytable~=3.9.0",
    "pydantic~=2.5.3",
    "pymongo~=4.6.1",
    "requests~=2.25.1",
]
